[package]
name = "rushm"
version = "0.1.0"
edition = "2021"
authors = ["Yangosoft", "Yangosoft <-@-.com>"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/yangosoft/rushm"
keywords = ["sharedmemory", "posix", "shared", "memory"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libc = "0.2"
log = "0.4"